kubernetes-manifests/bbq-apiserver.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbq-apiserver
spec:
  selector:
    matchLabels:
      app: bbq-apiserver
  template:
    metadata:
      labels:
        app: bbq-apiserver
    spec:
      containers:
        - name: bbq-apiserver
          image: bbq-apiserver
          ports:
            - containerPort: 21337
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.5"
              memory: "250Mi"
          args:
          - -cpus
          - "2"
          livenessProbe:
            httpGet:
              path: /v1/health/livecheck
              port: 21337
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: myfamilycooks
