kubernetes-manifests/bbq-frontend.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbq-frontend
spec:
  selector:
    matchLabels:
      app: bbq-frontend
  template:
    metadata:
      labels:
        app: bbq-frontend
    spec:
      containers:
        - name: bbq-frontend
          image: bbq-frontend
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.5"
              memory: "250Mi"            
      imagePullSecrets:
        - name: myfamilycooks
