kubernetes-manifests/bbq-apiserver.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bbq-apiserver
  name: bbq-apiserver
  selfLink: /api/v1/namespaces/default/services/bbq-apiserver
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 21337
  selector:
    app: bbq-apiserver
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
