kubernetes-manifests/bbq-frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bbq-frontend
  name: bbq-frontend
  selfLink: /api/v1/namespaces/default/services/bbq-frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: bbq-frontend
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
