kubernetes-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-bbq-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - bbq.k8s.ssargent.net
        - bbq-staging.k8s.ssargent.net
        - database.k8s.ssargent.net
        - bbq.k8s.mythicalcodelabs.com
      secretName: mythicalcodelabs-tls
  rules:
    - host: bbq-staging.k8s.ssargent.net
      http:
        paths:
          - path: /
            backend:
              serviceName: bbq-frontend
              servicePort: 80
          - path: /v1
            backend:
              serviceName: go-bbq
              servicePort: 80
    - host: database.k8s.ssargent.net
      http:
        paths:
          - path: /
            backend:
              serviceName: my-release-pgadmin
              servicePort: 80
    - host: bbq.k8s.mythicalcodelabs.com
      http:
        paths:
          - path: /
            backend: 
              serviceName: bbq-frontend
              servicePort: 80
          - path: /v1
            backend: 
              serviceName: bbq-apiserver
              servicePort: 80
